[package]
name = "test_bios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "simple_boot",
]

[dependencies]
bootloader = "0.10"
x86 = "0.49"
uart_16550 = "0.2.14"
spin = { version = "0.9.0", features = ["lazy"] }
nostdhf = "0.1"